rust/crates/astra-cli/src/tui/timeline/snapshots/astra__tui__timeline__view__tests__timeline_empty_80x3.snap
---
source: crates/astra-cli/src/tui/timeline/view.rs
expression: "render_tl(&tl, 80, 3)"
---
┌ Timeline · 0 turns · 0 in 0 out ─────────────────────────────────────────────┐
│  no turns recorded yet for this session                                      │
└──────────────────────────────────────────────────────────────────────────────┘
